fix layout bugs

--- a/css/style.css
+++ b/css/style.css
@@ -5604,7 +5604,7 @@ body.body--mobile-nav-open {
 .section--about {
   position: relative;
   background-color: #0A1931;
-  padding: 7rem 0 5rem;
+  padding: 7rem 0 3rem;
   overflow: hidden;
 }
 .section--about::before {
@@ -5613,14 +5613,19 @@ body.body--mobile-nav-open {
   width: 100%;
   height: 100%;
   top: 0;
-  background: linear-gradient(180deg, rgba(24, 90, 219, 0) 75%, rgba(24, 90, 219, 0.25) 100%);
+  background: linear-gradient(180deg, rgba(24, 90, 219, 0) 75%, rgba(24, 90, 219, 0.5) 100%);
 }
 @media (min-width: 768px) {
+  .section--about {
+    padding: 10rem 0 7rem;
+  }
+}
+@media (min-width: 992px) {
   .section--about {
     padding: 15rem 0 12rem;
   }
 }
-@media (min-width: 992px) {
+@media (min-width: 1200px) {
   .section--about {
     padding: 18rem 0 15rem;
   }
@@ -5869,36 +5874,30 @@ body.body--mobile-nav-open {
   flex-direction: column;
   justify-content: center;
 }
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   .section--work__text-container {
     padding-left: 2rem;
     padding-right: 2rem;
   }
 }
 
-.section--work__text-container--left {
-  padding-left: 2.75rem;
-}
-@media (max-width: 767px) {
+@media (min-width: 992px) {
   .section--work__text-container--left {
-    padding-left: 0.75rem;
+    padding-left: 2.75rem;
   }
 }
 
-.section--work__text-container--right {
-  padding-right: 2.75rem;
-}
-@media (max-width: 767px) {
+@media (min-width: 992px) {
   .section--work__text-container--right {
-    padding-right: 0.75rem;
+    padding-right: 2.75rem;
   }
 }
 
 .section--work__h3 {
   color: #0A1931;
   margin-bottom: 0.5rem;
-  font-size: 1.3125rem;
-  /* 21px */
+  font-size: 1.5rem;
+  /* 24px */
 }
 @media (min-width: 768px) {
   .section--work__h3 {
@@ -6008,12 +6007,16 @@ body.body--mobile-nav-open {
   width: 100%;
   height: 100%;
   top: 0;
-  background: linear-gradient(0deg, rgba(24, 90, 219, 0) 75%, rgba(24, 90, 219, 0.25) 100%);
+  background: linear-gradient(0deg, rgba(24, 90, 219, 0) 75%, rgba(24, 90, 219, 0.5) 100%);
 }
 @media (min-width: 992px) {
   .section--experience {
     padding: 10rem 0 7rem;
   }
+}
+
+.section--experience__container {
+  position: relative;
 }
 
 .section--experience__border {
