--- a/scss/_modules.scss
+++ b/scss/_modules.scss
@@ -201,7 +201,7 @@ body {
 .section--about {
 	position: relative;
 	background-color: #0A1931;
-	padding: 7rem 0 5rem;
+	padding: 7rem 0 3rem;
 	overflow: hidden;
 	&::before {
 		content: "";
@@ -209,12 +209,15 @@ body {
 		width: 100%;
 		height: 100%;
 		top: 0;
-		background: linear-gradient(180deg, rgba(24,90,219,0) 75%, rgba(24,90,219,0.25) 100%);
+		background: linear-gradient(180deg, rgba(24,90,219,0) 75%, rgba(24,90,219,0.5) 100%);
 	}
 	@media (min-width: 768px) {
-		padding: 15rem 0 12rem;
+		padding: 10rem 0 7rem;
 	}
 	@media (min-width: 992px) {
+		padding: 15rem 0 12rem;
+	}
+	@media (min-width: 1200px) {
 		padding: 18rem 0 15rem;
 	}
 }	 
@@ -461,30 +464,32 @@ body {
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
-		@media (min-width: 768px) {
+		@media (min-width: 992px) {
 			padding-left: 2rem;
 			padding-right: 2rem;
 		}
 	}
 
 	.section--work__text-container--left {
-		padding-left: 2.75rem;
-		@media (max-width: 767px) {
-			padding-left: 0.75rem;
+		// padding-right: 0;
+		// padding-left: 0;
+		@media (min-width: 992px) {
+			padding-left: 2.75rem;
 		}
 	}
 
 	.section--work__text-container--right {
-		padding-right: 2.75rem;
-		@media (max-width: 767px) {
-			padding-right: 0.75rem;
+		// padding-right: 0;
+		// padding-left: 0;
+		@media (min-width: 992px) {
+			padding-right: 2.75rem;
 		}
 	}
 
 	.section--work__h3 {
 		color: #0A1931;
 		margin-bottom: 0.5rem;
-		font-size: 1.3125rem; /* 21px */
+		font-size: 1.5rem; /* 24px */
 		@media (min-width: 768px) {
 			font-size: 1.875rem; /* 30px */
 		}
@@ -583,7 +588,7 @@ body {
 			width: 100%;
 			height: 100%;
 			top: 0;
-			background: linear-gradient(0deg, rgba(24,90,219,0) 75%, rgba(24,90,219,0.25) 100%);
+			background: linear-gradient(0deg, rgba(24,90,219,0) 75%, rgba(24,90,219,0.5) 100%);
 		}
 		@media (min-width: 768px) {
 			// padding: 15rem 0 12rem;
@@ -591,6 +596,10 @@ body {
 		@media (min-width: 992px) {
 			padding: 10rem 0 7rem;
 		}
+	}
+
+	.section--experience__container {
+		position: relative;
 	}
 	
 	.section--experience__border {
